html contents changed

--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -1,185 +1,5 @@
-<div ng-controller="ProjectDetailCtrl" class="productchat">
-   <div class="popover" ng-if="shareData.title" data-ng-include="'tpl/blocks/desktop/sharepopover.html'"></div>
-   <div class="wthree-dot" ng-if="!formLoading">
-      <div class="container" id="viewitemtop">
-         <div class="row">
-            <!-- Left Menu Here  -->
-            <div class="col-md-2 col-sm-2 col-lg-2 nopadding leftSidebar" data-ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-            <div class="col-md-10 col-sm-10 col-lg-10 nopadding">
-               <div class="col-md-12 col-sm-12 col-lg-12 nopadding paddingtopbottom">
-                  <div class="col-md-12 col-sm-12 col-lg-12 mypadding">
-                  <div class="wishlistheader ">
-                  <div class="col-sm-12 col-md-12 col-lg-12">
-                     <span class="wishlisttitle float-lt">Active Projects &nbsp;&nbsp;|&nbsp;&nbsp; 8 Projects</span>
-                     <div class="float-rt">
-                      <div class=" closeb" ng-click="goback();"><img src="img/closebutton.png"></div>
-                     <div class="clear"></div>
-                     </div>
-                     <div class="clear"></div>  
-                     </div>
-                  </div>
-               </div>
-            
-
-
-                  <div class="col-md-8 col-sm-8 col-lg-8 mypadding">
-                        <div class="top-banner-left">
-                     <slick data="projectData.files" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
-                        <div class="width100" ng-repeat="(key,image) in projectData.files">
-                           <div class="imgcontainer" background-image="{{IMGURL}}{{image.file}}" ng-if="image.filetype == 1"></div>
-                           <span ng-if="image.filetype == 2">
-                           <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')"></anguvideo>
-                           <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')"></sound-cloud-player>
-                        </span>
-                        </div>
-                     </slick>
-                     <div class="thumbslider">
-                        <slick data="projectData.files" settings="productthumbslick" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
-                           <div class="thumbholder" ng-repeat="(key,image) in projectData.files" >
-                              <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
-                           </div>
-                        </slick>
-                     </div>
-                     <div class="col-md-12 col-sm-12 col-lg-12 backgroundcream chatholder nopadding ">
-                        <div class="titlecontainers">
-                           <div class="request col-md-4">PROJECT STATUS</div>
-                           <div class="col-md-4 col-sm-4 col-lg-4 padd"></div>
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-lg-12 statusholder">
-                           <div class="statuscheckbar"><span><i class="fa fa-check-circle"></i><span class="border_top">&nbsp;</span></span><span><i class="fa fa-check-circle"></i><span class="border_top">&nbsp;</span></span>
-                              <span
-                                ><i class="fa fa-check-circle"></i><span class="border_top">&nbsp;</span></span><span class=""><i class="fa fa-check-circle"></i><span class="border_top">&nbsp;</span></span><span class=""><i class="fa fa-check-circle"></i></span>
-                           </div>
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-lg-12 statustext statustextholder">
-                           <div class="col-md-2 col-sm-2 col-lg-2 ">Project Accepted</div>
-                           <div class="col-md-2 col-sm-2 col-lg-2">Downpayment Received</div>
-                           <div class="col-md-2 col-sm-2 col-lg-2">Order in Progress</div>
-                           <div class="col-md-2 col-sm-2 col-lg-2">Order in Progress</div>
-                           <div class="col-md-2 col-sm-2 col-lg-2">Project Complete</div>
-                        </div>
-                     </div>
-                     </div>
-                  </div>
-                  <div class="col-md-4 col-sm-4 col-lg-4 mynewpadding-noleft" >
-                        <div class="top-banner-right backgroundwhite">
-                     <div class="col-md-12 col-sm-12 col-lg-12 mypadding mytoppadding backgroundwhite">
-                        <div class="userholder col-md-8 col-sm-8 col-lg-8 cursor nopadding">
-                           <img ng-src="{{IMGURL}}{{projectData.owner.avatar}}" class="userimage" ui-sref="app.viewuser({'id':projectData.owner.id})">
-                           <span>
-                           {{projectData.owner.username | cut:true:10:''}} 
-                        </div>
-                        <div class=" col-md-4 col-sm-4 col-lg-4 infostatus nopadding">
-                           <div class="float-rt "><i class="fa fa-circle" ng-class="projectData.owner.onlinestatus == 1 ? 'statusactive':'statusinactive'"></i> {{projectData.owner.onlinestatus == 1 ? 'Online':'Offline'}}
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-12 col-sm-12 col-lg-12 backgroundwhite paddingleftright projectdetail">
-                        <div class="titles margin-top">{{projectData.title}} </div>
-                        <div class="tracks margin-bottom">&nbsp;</div>
-                        <div class="description nopadding margin-bottom">{{projectData.description | cut:true:385:''}}</div>
-                        <div class="col-md-12 col-sm-12 col-lg-12 nopadding margin-top abilitylisting">
-                        </div>
-                        <div class="text-danger">{{projectData.deadline | date:'dd-MMM-yyyy'}}</div>
-                        <div class="border-bottom margin-top col-md-12 col-sm-12 col-lg-12"></div>
-                        <div class="clear"></div>
-                        <div class="product-right margin-top col-md-12 col-sm-12 col-lg-12 nopadding">
-                           <div class="price-box col-md-7 col-sm-7 col-lg-7 nopadding">
-                              <span class="per_price ng-binding">{{projectData.totalcost | currency}} SGD</span>
-                           </div>
-                           <div class="price-box col-md-5 col-sm-5 col-lg-5 nopadding margin-bottom">
-                              <div class="product-button  product-newbutton col-md-12 col-sm-12 col-lg-12     text-right nopadding">
-                                 <a class="btn-add-comparre" title="Add to Compare"><i class="fa fa-plus"></i></a>
-                                 <a class="btn-add-comparre nomargin" title="Share to Earn" ng-click="shareprojecttosocial(projectData)"><i class="fa fa-share"></i></a>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                     </div>
-                  </div>
-                  <div class="clear"></div>
-                  <div class="col-md-12 col-sm-12 col-lg-12 mypadding chatholder margin-top">
-                     <div class="titlecontainers">
-                        <div class="leftercontainer col-md-12 col-sm-12 col-lg-12 nopadding">
-                           <div class="request col-md-4 col-sm-4 col-lg-4">PROJECT DISCUSSIONS</div>
-                           <div class="padd col-md-4 col-sm-4 col-lg-4 text-right"></div>
-                           <div class="float-rt chatimageholder"><img ng-src="{{IMGURL}}{{projectData.owner.avatar}}" popover-trigger="mouseenter" popover="{{projectData.owner.username}}"><img ng-src="{{IMGURL}}{{member.user.avatar}}" ng-repeat="(no,member) in projectData.members" popover-trigger="mouseenter" popover="{{member.user.username}}"></div>
-                        </div>
-                     </div>
-                     <div class="chatbody" id="GroupChat">
-                        <div class="col-md-12 col-sm-12 col-lg-12 chatmessagecontainer" scroll-to-bottom="chatData" id="chatbody" ng-class="{'nocontentchat':chatData.length == 0 }">
-                           <div class="chatinnerbody" ng-if="chatData.length == 0">You didn't start your chat yet!</div>
-                           <div class="chatinnerbody" ng-repeat="message in chatData">
-                              <img ng-if="message.user_id != user.id" ng-src="{{IMGURL}}{{message.avatar}}" class="userimg">
-                              <div class="chatsender newchat" ng-class="user.id == message.user_id ? 'right':'left'"> 
-                                 <span ng-class="{'chat-msgcontent': user.id != message.user_id}" class="mb-20">
-                                 <span ng-if="!message.isfile" class="chat-msgcontent">{{message.message}}</span>
-                                  <div class="text-center col-md-12 col-sm-12 col-lg-12" ng-if="message.isfile">
-                                 <span class="chatimg" ng-if="message.isfile" background-image="{{IMGURL}}{{message.fileurl}}" ng-click="viewChatImg(message);"></span>
-                              </div>
-                                 </span>
-                                 <span class="chatdate">{{message.created_at | date:'dd-MMM-yy'}} </span><span class="chattime">{{message.created_at | date:'hh:mm a'}} </span><span class="chatname" ng-if="message.user_id != user.id">{{message.username}}</span>
-                              </div>
-                           </div>
-                        </div>
-                      
-                     </div>
-                      <div class="clear"></div>
-                     <div class="col-md-12 col-sm-12 col-lg-12 newtoppad">
-                     <div class="col-md-12 col-sm-12 col-lg-12 relativechat">
-                        <i class="fa fa-smile-o chatsmile" aria-hidden="true"></i>
-                        <input type="text" name="chat" class="chater" placeholder="Write a reply" ng-model="chatMessage.message" my-enter="sendReplymessage()">
-                        <i class="fa fa-paperclip chatattach" aria-hidden="true" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="sendattachment($files);"></i>
-                        <i class="fa fa-paper-plane chatsend" aria-hidden="true" ng-click="sendReplymessage()"></i>
-                     </div>
-                  </div>
-                  </div>
-               </div>
-               <div class="col-md-12 col-sm-12 col-lg-12  chatholder mypadding margin-top margin-bottom">
-                  <div class="titlecontainers">
-                     <div class="request col-md-8 col-sm-8 col-lg-8">COMMENTS & PROJECT REVIEW</div>
-                     <div class="col-md-4 col-sm-4 col-lg-4 padd"></div>
-                  </div>
-                  <div class="col-md-12 col-sm-12 col-lg-12 backgroundwhite">
-                     <div class="commentholder col-md-9 col-sm-9 col-lg-9">
-                        <div class="commenttitle">My comments</div>
-                        <div class="commentarea">
-                           I am impressed what the service rendered and his professionalism in handling this project. superb communication and very knowledgeable. i will definitely recommend and would like to work with Melvin in future project. keep up the good work!
-                        </div>
-                        <div class="ratingarea col-md-12 col-sm-12 col-lg-6">
-                           <div class="ratingitem col-md-12 col-sm-12 col-lg-12 nopadding">
-                              <div class="float-lt ratingtitle">Level of Proficiency</div>
-                              <div class="float-rt ratingstar"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star "></i></div>
-                           </div>
-                           <div class="ratingitem col-md-12 col-sm-12 col-lg-12 nopadding">
-                              <div class="float-lt ratingtitle">Service Owner Reliability</div>
-                              <div class="float-rt ratingstar"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star "></i></div>
-                           </div>
-                           <div class="ratingitem col-md-12 col-sm-12 col-lg-12 nopadding">
-                              <div class="float-lt ratingtitle">Easy to Communicate</div>
-                              <div class="float-rt ratingstar"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star "></i></div>
-                           </div>
-                           <div class="ratingitem col-md-12 col-sm-12 col-lg-12 nopadding">
-                              <div class="float-lt ratingtitle">Project Puntuality</div>
-                              <div class="float-rt ratingstar"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star "></i></div>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="col-md-3 col-sm-3 col-lg-3">
-                        <div class="overallrating">
-                           <div class="overalltitle">Appreciation</div>
-                           <div class="ratingstar text-center"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star "></i></div>
-                        </div>
-                        <div class="overallpoint">
-                           <img src="img/overall.png">
-                           <div class="pointholder">50</div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <div class="col-md-2 col-sm-2 col-lg-2 nopadding rightSidebar" data-ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
-         </div>
-      </div>
-   </div>
+<div ng-controller="ProjectDetailCtrl" class="content-wrapper">
+   <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+   <div class="center-content"></div>
+   <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
