--- a/angular/index.html
+++ b/angular/index.html
@@ -61,7 +61,7 @@
     <script src="libs/chart/angular-chart.min.js"></script>
     <script src="libs/chart/chartjs-plugin-labels.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.3/moment.js"></script>
-    <script src="libs/angular/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.js"></script>
     <script src="libs/angular/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="libs/angular/ngstorage/ngStorage.js"></script>
     <script src="libs/angular/angular-ui-utils/ui-utils.js"></script>
