--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper" ng-controller="UserMainCtrl">
-    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
         <!-- app top -->
         <div class="container-top">
@@ -287,5 +287,5 @@
             </div>
         </div>
     </div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
