new changes committed

--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper" ng-controller="UserMainCtrl">
     <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-    <div class="center-content">
+    <div class="center-content content">
         <!-- app top -->
         <div class="container-top">
             <div class="container-left">
