--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -1,5 +1,114 @@
 <div ng-controller="ProjectDetailCtrl" class="content-wrapper">
    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-   <div class="center-content"></div>
+   <div class="center-content">
+   		<div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar">
+                    <div class="topbar-left">
+                        <ul class="topbar-list">
+                            <li>Active feeds</li>
+                            <li>5 feeds </li>
+                        </ul>
+                    </div>
+                    <div class="topbar-right">
+                        <i class="fa fa-window-close-o secondary"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-top mt-15">
+            <div class="content-detail-left">
+                <div class="slider-wrapper">
+                    <div class="custom-slider">
+                        <slick data="projectData.files" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                            <div class="width100 sliderframer" ng-repeat="(key,image) in projectData.files">
+                                <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
+                                    <span ng-if="image.filetype == 2">
+                                        <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
+                                        <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
+                                    </span>
+                                </div>
+                            </div>
+                        </slick>
+                        <div class="thumbslider">
+                            <slick data="projectData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                                <div class="thumbholder" ng-repeat="(key,image) in projectData.files">
+                                    <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                                </div>
+                            </slick>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-detail-right">
+                <div class="feeds-wrapper">
+                    <div class="feed-head">
+                        <div class="feed-head-left">
+                            <div class="avatar avatar-xs">
+                                <img ng-src="{{IMGURL}}{{projectData.owner.avatar}}" ui-sref="app.viewuser({'id':projectData.owner.id})" />
+                            </div>
+                            <h3>{{projectData.owner.username | cut:true:20:''}} </h3>
+                        </div>
+                        <div class="feed-head-right">
+                            <i class="fa fa-circle" ng-class="projectData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{projectData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
+                        </div>
+                    </div>
+                    <div class="feed-body">
+                        <h4>{{projectData.title}}</h4>
+                        <p>{{projectData.description | cut:true:385:''}}</p>
+                    </div>
+                    <div class="feed-footer">
+                        <div class="feed-footer-left">
+                            <span class="price">{{projectData.totalcost | currency}} SGD</span>
+                            <span class="price-sub">&nbsp;</span>
+                        </div>
+                        <div class="feed-footer-right">
+                            <a title="Share to Earn" ng-click="sharefeedtosocial(projectData)"><i class="fa fa-share"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row  mt-15">
+            <div class="col-lg-12 col-md-12">
+                <div class="chat-wrap">
+                    <div class="message-head">
+                        <h2>Project Discussions</h2>
+                        <div class="option">
+                            <img ng-src="{{IMGURL}}{{projectData.owner.avatar}}" popover-trigger="mouseenter" popover={{projectData.owner.username}}  />
+                            <img ng-src="{{IMGURL}}{{member.user.avatar}}" ng-repeat="(no,member) in projectData.members" popover-trigger="mouseenter" popover={{member.user.username}}>
+                        </div>
+                    </div>
+
+                    <div class="messenger" scroll-to-bottom="chatData">
+
+                        <div class="message-wrap" ng-repeat="message in chatData">
+                            <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
+                                <div class="other-img" ng-if="message.user_id != user.id">
+                                    <img ng-src="{{IMGURL}}{{message.avatar}}">
+                                </div>
+                                <div class="info">{{message.message}}
+                                    <img ng-src="{{IMGURL}}{{message.fileurl}}" ng-click="viewChatImg(message.fileurl);" alt="Chat" ng-if="message.isfile">
+                                    <div class="time-left">
+                                        <span am-time-ago="message.created_at" ng-if="checkDate(message.created_at) == true"></span>
+                                        <time ng-if="checkDate(message.created_at) == false">{{ message.created_at | amDateFormat: 'DD-MMM-YY hh:mm a' }}</time>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sender">
+                        <div class="msg-text">
+                            <a class="small-btn"><i class="fa fa-smile-o"></i></a>
+                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()" id="emojionearea">
+                            <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="senduserchatattachment($files);"><i class="fa fa-paperclip"></i></a>
+                        </div>
+                        <div class="chat-btn" ng-click="sendPrivateReplymessage()"><i class="fa fa-send"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
