--- a/angular/tpl/desktop/search.html
+++ b/angular/tpl/desktop/search.html
@@ -1,5 +1,154 @@
-<div ng-controller="SearchCtrl"  class="content-wrapper">
-   <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-   <div class="center-content"></div>
-   <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+<div ng-controller="SearchCtrl" class="content-wrapper">
+    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="center-content">
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar">
+                    <div class="topbar-left">
+                        <h2>Results for “{{keyword}}"</h2>
+                    </div>
+                    <div class="topbar-right">
+                        <ul class="topbar-list">
+                            <li>{{products.total}} results available</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-15">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar result">
+                    <div class="topbar-left">
+                        <span class="lefttext">Showing <b>{{products.from}}</b> to <b>{{products.to}}</b> of <b>{{products.total}}</b> Results.</span>
+                    </div>
+                    <div class="topbar-right">
+                        <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Sort by <i class="fa fa-angle-down ml-10"></i></span>
+                        <ul class="dropdown-menu">
+                            <li><a ng-click="searchsortproduct('noofviews','desc')"><i class="fa fa-star"></i> Popular</a></li>
+                            <li><a ng-click="searchsortproduct('created_at','desc')"><i class="fa fa-clock-o"></i> Recent</a></li>
+                            <li><a ng-click="searchsortproduct('price','asc')"><i class="fa fa-sort-amount-asc"></i> Price L-H</a></li>
+                            <li><a ng-click="searchsortproduct('price','desc')"><i class="fa fa-sort-amount-desc"></i> Price H-L</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-top mt-15" ng-if="viewData.title">
+            <div class="content-detail-left">
+                <div class="slider-wrapper">
+                    <div class="custom-slider">
+                        <slick data="viewData.images" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                            <div class="width100 sliderframer" ng-repeat="(key,image) in viewData.images">
+                                <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
+                                    <span ng-if="image.filetype == 2">
+                                        <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
+                                        <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
+                                    </span>
+                                </div>
+                            </div>
+                        </slick>
+                        <div class="thumbslider">
+                            <slick data="viewData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                                <div class="thumbholder" ng-repeat="(key,image) in viewData.images">
+                                    <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                                </div>
+                            </slick>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-detail-right">
+                <div class="feeds-wrapper">
+                    <div class="feed-head">
+                        <div class="feed-head-left">
+                            <div class="avatar avatar-xs">
+                                <img ng-src="{{IMGURL}}{{viewData.owner.avatar}}" ui-sref="app.viewuser({'id':viewData.owner.id})" />
+                            </div>
+                            <h3>{{viewData.owner.username | cut:true:20:''}} </h3>
+                        </div>
+                        <div class="feed-head-right">
+                            <i class="fa fa-circle" ng-class="viewData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{viewData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
+                        </div>
+                    </div>
+                    <div class="feed-body">
+                        <h4>{{viewData.title}}</h4>
+                        <p>{{viewData.description | cut:true:385:''}}</p>
+                    </div>
+                    <div class="feed-footer">
+                        <div class="feed-footer-left">
+                            <span class="price">&nbsp;</span>
+                            <span class="price-sub">&nbsp;</span>
+                        </div>
+                        <div class="feed-footer-right">
+                            <a title="Add to Wishlist" ng-click="updatefeedwish()" ng-if="viewData.owner.id != user.id"><i class="fa fa-plus" ng-class="{'primary': feedchat.wishstatus == 1}"></i></a>
+                            <a title="Share to Earn" ng-click="sharefeedtosocial(viewData)"><i class="fa fa-share"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-15">
+
+            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" dir-paginate="(key,data) in products.data | itemsPerPage: totalPerPage" total-items="products.total" current-page="pagination.current" pagination-id="search-pagination">
+                <div class="card" ng-click="showitem(key,data)" >
+                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
+                    </div>
+                    <div class="card-content">
+                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                        <div class="card-info">
+                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                            <span class="price-sub" ng-if=" data.price > 0 && data.type != 'Shop' ">Per {{data.periodtype}}</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id != user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
+                        <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
+                        <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-30">
+            <div class="col-lg-12 col-md-12 col-sm-12" ng-if="products.last_page > 1 && !formLoading">
+                <dir-pagination-controls on-page-change="pageChanged(newPageNumber,'friends')" class="pagination-ctrl" pagination-id="search-pagination"></dir-pagination-controls>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 col-md-12">
+                <div class="topbar bg-gray">
+                    <div class="topbar-left">
+                        <h2 class="text-white">You may also Like</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-15">
+
+            <div class="col-lg-3 col-md-3 col-xs-12 col-sm-4" ng-repeat="(key,data) in alsolikeproducts">
+                <div class="card">
+                    <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}" ui-sref="app.viewitem({id:data.id})">
+                    </div>
+                    <div class="card-content">
+                        <h4 class="word-line" ui-sref="app.viewitem({id:data.id})">{{data.title | cut:true:18:''}}</h4>
+                        <div class="card-info">
+                            <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
+                            <span class="price-sub" ng-if=" data.price > 0 && data.type != 'Shop' ">Per {{data.periodtype}}</span>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a title="Add to Wishlist" ng-click="updatewishstatus(data,'event',key)" ng-if="data.owner.id != user.id"><i class="fa fa-heart" ng-class="{'primary': data.wishstatus == 1}"></i></a>
+                        <a title="Add to Cart" ng-if="data.owner.id!=user.id" ng-click="addTocart(data.id)"><i class="fa fa-plus"></i></a>
+                        <a title="Share to Earn" ng-click="sharetosocial(data)"><i class="fa fa-share"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
