left and right menu class added and search page fixed

--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper" ng-controller="UserChatsCtrl">
-     <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-   <div class="center-content">
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="center-content">
       <div class="row">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
@@ -55,5 +55,5 @@
             </div>
         </div>
     </div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
