--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -1,5 +1,5 @@
 <div ng-controller="PrivateChatsCtrl" class="content-wrapper">
-    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
         <div class="row ">
             <div class="col-lg-12 col-md-12">
@@ -102,7 +102,7 @@
             </div>
         </div>
     </div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
 <style type="text/css">
     .emojionearea-editor {
