--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -1,5 +1,5 @@
 <div ng-controller="ViewItemCtrl" class="content-wrapper">
-    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
         <div class="topbar">
             <div class="topbar-left">
@@ -176,7 +176,7 @@
         </div>
 
     </div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
 
 <style type="text/css">
