--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -1,5 +1,5 @@
 <div class="content-wrapper" ng-controller="ProjectListCtrl">
-    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content">
         <div class="row">
             <div class="col-lg-12 col-md-12">
@@ -67,5 +67,5 @@
             </div>
         </div>
     </div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
