--- a/angular/tpl/desktop/viewtodo.html
+++ b/angular/tpl/desktop/viewtodo.html
@@ -1,5 +1,5 @@
 <div ng-controller="ViewTodoCtrl" class="content-wrapper">
-    <div ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
+    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
     <div class="center-content"></div>
-    <div ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
+    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
