product chat and rightmenu for product chat added

--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -328,7 +328,7 @@
     </div>
 </div>
 
-<div class="right-sidebar" ng-if="stateurl == 'app.viewitem'">
+<div class="right-sidebar" ng-if="stateurl == 'app.viewitem' || stateurl == 'app.productchat'">
             
             <div class="right-wrapper">
                 <div class="right-title">
