--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -1,5 +1,128 @@
 <div ng-controller="ProductChatCtrl" class="content-wrapper">
    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
-   <div class="center-content"></div>
+   <div class="center-content">
+   	 <div class="container-top mt-15 mb-15" ng-if="ProductViewData.title">
+            <div class="content-detail-left">
+                <div class="slider-wrapper">
+                    <div class="custom-slider">
+                        <slick data="ProductViewData.images" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                            <div class="width100 sliderframer" ng-repeat="(key,image) in ProductViewData.images">
+                                <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
+                                    <span ng-if="image.filetype == 2">
+                                        <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
+                                        <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
+                                    </span>
+                                </div>
+                            </div>
+                        </slick>
+                        <div class="thumbslider">
+                            <slick data="ProductViewData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                                <div class="thumbholder" ng-repeat="(key,image) in ProductViewData.images">
+                                    <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                                </div>
+                            </slick>
+                        </div>
+                    </div>
+                </div>
+                <div class="more-info">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 text-center">
+                                <h5>Collection Items</h5>
+                                <div class="count">20</div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 text-center br-v">
+                                <h5>Completed Projects</h5>
+                                <div class="count">50</div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 text-center">
+                                <h5>{{ProductViewData.owner.xprank.rankname}}</h5>
+                                <img class="rank-icon" ng-src="{{IMGURL}}{{ProductViewData.owner.xprank.icon}}" />
+                            </div>
+                        </div>
+                </div>
+            </div>
+             <div class="content-detail-right">
+                    <div class="feeds-wrapper">
+                        <div class="feed-head">
+                            <div class="feed-head-left">
+                                <div class="avatar avatar-xs">
+                                    <img ng-src="{{IMGURL}}{{ProductViewData.owner.avatar}}" ui-sref="app.viewuser({'id':ProductViewData.owner.id})" />
+                                </div>
+                                <h3>{{ProductViewData.owner.username | cut:true:20:''}}</h3>
+                            </div>
+                            <div class="feed-head-right">
+                                <i class="fa fa-circle" ng-class="ProductViewData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{ProductViewData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
+                            </div>
+                        </div>
+                        <div class="feed-body">
+                            <h4>{{ProductViewData.title}}</h4>
+                            <p>{{ProductViewData.description | cut:true:385:''}}</p>
+                        </div>
+                        <div class="feed-footer top-feed-footer">
+                            <div class="feed-footer-left">
+                                <button type="button" class="btn silver-btn" ui-sref="app.viewitem({id:ProductViewData.id})">View More</button>
+                            </div>
+                            <div class="feed-footer-right">
+                                <a title="Add to Wishlist" ng-click="updatefeedwish()" ng-if="ProductViewData.owner.id != user.id"><i class="fa fa-plus" ng-class="{'primary': feedchat.wishstatus == 1}"></i></a>
+                                <a href="#"><i class="fa fa-plus"></i></a>
+                                <a title="Share to Earn" ng-click="sharefeedtosocial(ProductViewData)"><i class="fa fa-share"></i></a>
+                            </div>
+                        </div>
+                        <div class="feed-footer">
+                            <div class="feed-footer-left">
+                                <span class="price">{{ProductViewData.price ? '$' + ProductViewData.price: 'Free'}}</span>
+                                <span class="price-sub" ng-if="ProductViewData.price > 0 && ProductViewData.type!='Shop'">per {{ProductViewData.periodtype}}</span>
+                            </div>
+                            <div class="feed-footer-right">
+                                <a class="btn success-btn right" ng-click="editProduct();" ng-if="ProductViewData.owner.id == user.id">Edit Product</a>
+
+                                <a class="btn success-btn right" ng-click="showCommision();" ng-if="(ProductViewData.owner.id != user.id)&&(!ProductViewData.commisionData)">{{ (ProductViewData.type == 'Service' ? 'Commission' : (ProductViewData.type == 'Shop' ? 'Order Now' : ProductViewData.type == 'Rental' ? 'Book Now' : ProductViewData.type == 'Event' ? 'Register Now': ProductViewData.type))  }}</a>
+
+                                <a class="btn success-btn right" ng-click="gotoChat(ProductViewData.id)" ng-if="(ProductViewData.owner.id != user.id) && (ProductViewData.commisionData)">View  {{ (ProductViewData.type == 'Service' ? 'Commisioned' : (ProductViewData.type == 'Shop' ? 'Product' : ProductViewData.type == 'Rental' ? 'Booked' : ProductViewData.type == 'Event' ? 'Registered': ProductViewData.type))  }}</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+     </div>
+     <div class="row  mt-15">
+            <div class="col-lg-12 col-md-12">
+                <div class="chat-wrap">
+                    <div class="message-head">
+                        <h2>Product Discussions</h2>
+                        <div class="option">
+                            <img ng-src="{{IMGURL}}{{ProductViewData.owner.avatar}}" popover={{ProductViewData.owner.username}} popover-trigger="mouseenter"  />
+                            <img ng-src="{{IMGURL}}{{ProductViewData.buyer.avatar}}" popover={{ProductViewData.buyer.username}} popover-trigger="mouseenter">
+                        </div>
+                    </div>
+
+                    <div class="messenger" scroll-to-bottom="chatData">
+
+                        <div class="message-wrap" ng-repeat="message in chatData">
+                            <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
+                                <div class="other-img" ng-if="message.user_id != user.id">
+                                    <img ng-src="{{IMGURL}}{{message.avatar}}">
+                                </div>
+                                <div class="info">{{message.message}}
+                                    <img ng-src="{{IMGURL}}{{message.fileurl}}" ng-click="viewChatImg(message.fileurl);" alt="Chat" ng-if="message.isfile">
+                                    <div class="time-left">
+                                        <span am-time-ago="message.created_at" ng-if="checkDate(message.created_at) == true"></span>
+                                        <time ng-if="checkDate(message.created_at) == false">{{ message.created_at | amDateFormat: 'DD-MMM-YY hh:mm a' }}</time>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sender">
+                        <div class="msg-text">
+                            <a class="small-btn"><i class="fa fa-smile-o"></i></a>
+                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()" id="emojionearea">
+                            <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="senduserchatattachment($files);"><i class="fa fa-paperclip"></i></a>
+                        </div>
+                        <div class="chat-btn" ng-click="sendPrivateReplymessage()"><i class="fa fa-send"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
    <div class="rightSidebar" ng-include="'tpl/blocks/desktop/rightmenu.html'"></div>
 </div>
