--- a/angular/tpl/desktop/userchat.html
+++ b/angular/tpl/desktop/userchat.html
@@ -77,7 +77,7 @@
                         </div>
                     </div>
 
-                    <div class="messenger" scroll-to-bottom="chatData">
+                    <div class="messenger private-chat" scroll-to-bottom="chatData">
 
                         <div class="message-wrap" ng-repeat="message in chatData">
                             <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
