--- a/angular/tpl/desktop/feedchat.html
+++ b/angular/tpl/desktop/feedchat.html
@@ -16,55 +16,59 @@
                 </div>
             </div>
         </div>
-        <div class="container-top mt-15">
-            <div class="content-detail-left">
-                <div class="slider-wrapper">
-                    <div class="custom-slider">
-                        <slick data="feedData.files" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
-                            <div class="width100 sliderframer" ng-repeat="(key,image) in feedData.files">
-                                <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
-                                    <span ng-if="image.filetype == 2">
-                                        <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
-                                        <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
-                                    </span>
+        <div class="row mt-15">
+            <div class="col-lg-12 col-md-12">
+                <div class="container-top">
+                    <div class="content-detail-left">
+                        <div class="slider-wrapper">
+                            <div class="custom-slider">
+                                <slick data="feedData.files" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                                    <div class="width100 sliderframer" ng-repeat="(key,image) in feedData.files">
+                                        <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
+                                            <span ng-if="image.filetype == 2">
+                                                <anguvideo ng-model="image.file" width="100%" height="auto" ng-if="image.file&&!image.file.includes('soundcloud')" id="{{image.file.includes('youtu') ? 'youtube' : 'vimeo'}}{{key}}"></anguvideo>
+                                                <sound-cloud-player url="{{image.file}}" class="m-t-sm" ng-if="image.file&&image.file.includes('soundcloud')" id="soundcloud{{key}}"></sound-cloud-player>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </slick>
+                                <div class="thumbslider">
+                                    <slick data="feedData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                                        <div class="thumbholder" ng-repeat="(key,image) in feedData.files">
+                                            <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                                        </div>
+                                    </slick>
                                 </div>
                             </div>
-                        </slick>
-                        <div class="thumbslider">
-                            <slick data="feedData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
-                                <div class="thumbholder" ng-repeat="(key,image) in feedData.files">
-                                    <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
+                        </div>
+                    </div>
+                    <div class="content-detail-right"> <!-- feeds-no-options - add this if no second footer -->
+                        <div class="feeds-wrapper">
+                            <div class="feed-head">
+                                <div class="feed-head-left">
+                                    <div class="avatar avatar-xs">
+                                        <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" />
+                                    </div>
+                                    <h3>{{feedData.owner.username | cut:true:20:''}} </h3>
                                 </div>
-                            </slick>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="content-detail-right">
-                <div class="feeds-wrapper">
-                    <div class="feed-head">
-                        <div class="feed-head-left">
-                            <div class="avatar avatar-xs">
-                                <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" />
+                                <div class="feed-head-right">
+                                    <i class="fa fa-circle" ng-class="feedData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{feedData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
+                                </div>
                             </div>
-                            <h3>{{feedData.owner.username | cut:true:20:''}} </h3>
-                        </div>
-                        <div class="feed-head-right">
-                            <i class="fa fa-circle" ng-class="feedData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{feedData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
-                        </div>
-                    </div>
-                    <div class="feed-body">
-                        <h4>{{feedData.title}}</h4>
-                        <p>{{feedData.description | cut:true:385:''}}</p>
-                    </div>
-                    <div class="feed-footer">
-                        <div class="feed-footer-left">
-                            <span class="price">&nbsp;</span>
-                            <span class="price-sub">&nbsp;</span>
-                        </div>
-                        <div class="feed-footer-right">
-                            <a title="Add to Wishlist" ng-click="updatefeedwish()" ng-if="feedData.owner.id != user.id"><i class="fa fa-plus" ng-class="{'primary': feedchat.wishstatus == 1}"></i></a>
-                            <a title="Share to Earn" ng-click="sharefeedtosocial(feedData)"><i class="fa fa-share"></i></a>
+                            <div class="feed-body">
+                                <h4>{{feedData.title}}</h4>
+                                <p>{{feedData.description | cut:true:385:''}}</p>
+                            </div>
+                            <div class="feed-footer">
+                                <div class="feed-footer-left">
+                                    <span class="price">&nbsp;</span>
+                                    <span class="price-sub">&nbsp;</span>
+                                </div>
+                                <div class="feed-footer-right">
+                                    <a title="Add to Wishlist" ng-click="updatefeedwish()" ng-if="feedData.owner.id != user.id"><i class="fa fa-plus" ng-class="{'primary': feedchat.wishstatus == 1}"></i></a>
+                                    <a title="Share to Earn" ng-click="sharefeedtosocial(feedData)"><i class="fa fa-share"></i></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
